# plottter-daemon

./: .gitignore  README.md  pyproject.toml
deploy/: plottter-daemon.service
plottter_daemon/: __init__.py  __main__.py  executor.py  jobs.py  server.py
tests/: test_server.py
